[feat] Numbers 부분 완성